добавление случайной картинки

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 
     <!-- 🔹 Каталог магазинов -->
     <section class="shops">
+        <div class="gallery">
+            <h3>Галерея (з'явиться через 5 секунд)</h3>
+        </div>
+
         <h2>Популярні магазини</h2>
         <div class="shop-grid">
             <div class="shop-card">
