--- a/index.html
+++ b/index.html
@@ -170,10 +170,15 @@
         </div>
     </section>
 
-    <section class="container api-section">
-        <h2>📦 Дані з API</h2>
-        <button onclick="loadUsers()">Завантажити користувачів</button>
-        <ul id="userList"></ul>
+    <section class="container api-section" style="padding: 20px; background: #f0f4f8; margin-top: 20px;">
+        <h2>🌐 Каталог API (APIs.guru)</h2>
+        <p>Натисніть кнопку, щоб завантажити список популярних API.</p>
+        
+        <button id="load-api-btn" style="padding: 10px 20px; cursor: pointer; background: #007bff; color: white; border: none; border-radius: 5px;">
+            Отримати список API
+        </button>
+
+        <div id="api-list" class="api-grid" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 20px; margin-top: 20px;"></div>
     </section>
 
 
