--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LetyShops – Кешбек на покупки</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="scripts/header.js" defer></script>
     <script src="scripts/shop.js"></script>
     <link rel="stylesheet" href="styles/global.css">
