--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Сторінка авторизації LetyShops">
     <title>Вхід | LetyShops</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="scripts/header.js" defer></script>
     <script src="scripts/login.js" defer></script>
     <link rel="stylesheet" href="styles/global.css">
